@@ -5,17 +5,15 @@ import rpg.Monsters.Bosses.Ghazkull;
 import rpg.Monsters.Mob;
 import rpg.Utils.Messages.Portraits;
 import rpg.Utils.Messages.Start;
-import rpg.Utils.SlowConsole;
 
 import java.util.List;
 
 public class Dungeon1Coop extends DungeonBaseCoop {
-    private final SlowConsole slowConsole = new SlowConsole();
 
     @Override
     protected Attributes createEnemy(List<Attributes> jogadores) {
         // Determina o nível dos jogadores; aqui assumimos que todos os jogadores têm o mesmo nível.
-        int nivelMedio = jogadores.get(0).getLevel();
+        int nivelMedio = jogadores.getFirst().getLevel();
 
         if (nivelMedio >= 5) {
             Start.EncounterGhazkull(); // Exibe a mensagem ao encontrar Ghazkull
@@ -26,7 +24,6 @@ public class Dungeon1Coop extends DungeonBaseCoop {
             int randomMonster = random.nextInt(5);
             Mob mob;
             switch (randomMonster) {
-                case 0 -> mob = new Mob("Sombra do Abismo", 35, 5, 13, "Sinto o cosmos chorando!", 5, 5, Portraits.PortraitSombraDoAbismo());
                 case 1 -> mob = new Mob("Andarilho dos Vastos Vácuos", 50, 12, 10, "A eternidade me consome...", 10, 10, Portraits.PortraitAndarilhoDosVastosVacuo());
                 case 2 -> mob = new Mob("Crepúsculo Alado", 25, 5, 4, "O vazio é meu lar...", 3, 3, Portraits.PortraitCrepusculoAlado());
                 case 3 -> mob = new Mob("Caçador de Almas", 65, 15, 7, "Seu ouro não pode salvar sua mente...", 15, 15, Portraits.PortraitCacadorDeAlmas());
